Добавлены юнит-тесты для TaskPresenter
- Добавлены тесты для загрузки, добавления, обновления, удаления и фильтрации задач.
- Покрыта логика toggleTaskCompletion.
- Реализован MockTaskInteractor для изолированного тестирования Presenter.

--- a/ToDO LIst.xcodeproj/xcshareddata/xcschemes/ToDO LIst.xcscheme
+++ b/ToDO LIst.xcodeproj/xcshareddata/xcschemes/ToDO LIst.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "C2420B672C8A284900475BCE"
+               BuildableName = "ToDO LIstTests.xctest"
+               BlueprintName = "ToDO LIstTests"
+               ReferencedContainer = "container:ToDO LIst.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
